# teleop_template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: CMakeLists.txt  README.md  default.nix  package.xml
{{cookiecutter.project_name}}/launch/: teleop.launch.py
{{cookiecutter.project_name}}/params/: teleop.yaml
